Update slug for JARVIS app in app.json

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "JARVIS",
-    "slug": "jarvis",
+    "slug": "jarvis_assistant_2026",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
