Refactor plugin array format in app.json

--- a/app.json
+++ b/app.json
@@ -30,18 +30,18 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      [
-        "expo-router",
-        {
-          "origin": "https://replit.com/"
-        }
-      ],
+      ["expo-router", { "origin": "https://replit.com/" }],
       "expo-font",
       "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "0c7a6e36-d9f1-49ef-88e3-af3ff781e8a1"
+      }
     }
   }
 }
